# phincon_week_6/express-sequelize/routes/student.route.js
@@ -1,0 +1,19 @@
+const express = require("express");
+const router = express.Router();
+const {
+    getAllStudents,
+    getStudentById,
+    createStudent,
+    updateStudent,
+    deleteStudent,
+    getAllStudentsWithIdentity
+} = require("../controllers/student.controller");
+
+router.get("/identity", getAllStudentsWithIdentity);
+router.get("/", getAllStudents);
+router.get("/:id", getStudentById);
+router.post("/", createStudent);
+router.put("/:id", updateStudent);
+router.delete("/:id", deleteStudent);
+
+module.exports = router;
